# ricardo-scraper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  SECURITY.md  pin_camoufox_browser.py  pyproject.toml  ricardo_scraper.py  scraper.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: REFERENCE.md
tests/: conftest.py  test_browser_session.py  test_category.py  test_cli.py  test_detail.py  test_e2e.py  test_extra_fields.py  test_flatten.py  test_io.py  test_scrape.py  test_search.py
